--- a/1-1.8/1-1.8.cbp
+++ b/1-1.8/1-1.8.cbp
@@ -14,12 +14,6 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
-				<Linker>
-					<Add library="sfml-graphics-s-d" />
-					<Add library="sfml-window-s-d" />
-					<Add library="sfml-system-s-d" />
-					<Add library="sfml-main-d" />
-				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/1-1.8" prefix_auto="1" extension_auto="1" />
@@ -31,27 +25,21 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="sfml-graphics-s" />
-					<Add library="sfml-window-s" />
-					<Add library="sfml-system-s" />
-					<Add library="sfml-main" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-DSFML_STATIC" />
 			<Add option="-Wall" />
+			<Add option="-DSFML_STATIC" />
 			<Add directory="C:/Program Files/CodeBlocks/2ea46c8702c3ddeeea56976b96a8454abd9901db/include" />
 		</Compiler>
 		<Linker>
-			<Add library="mingw32" />
-			<Add library="user32" />
-			<Add library="gdi32" />
-			<Add library="winmm" />
-			<Add library="dxguid" />
+			<Add library="sfml-graphics" />
+			<Add library="sfml-window" />
+			<Add library="sfml-system" />
+			<Add library="sfml-main" />
 			<Add directory="C:/Program Files/CodeBlocks/2ea46c8702c3ddeeea56976b96a8454abd9901db/lib" />
 		</Linker>
-		<Unit filename="cb.bmp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
